Next release
============

Bug Fixes
---------

- ``model_url`` when passed a request that was generated as a result
  of a route match would fail in a call to ``route.generate``.

Documentation
-------------

- Added a "corner case" explanation to the "Hybrid Apps" chapter
  explaining what to do when "the wrong" view is matched.

1.0a2 (2009-06-23)
==================

Bug Fixes
---------

- The ``bfg_routesalchemy`` paster template app tests failed due to a
  mismatch between test and view signatures.

Features
--------

- Add a ``view_for`` attribute to the ``route`` ZCML directive.  This
  attribute should refer to an interface or a class (ala the ``for``
  attribute of the ``view`` ZCML directive).

Documentation
-------------

- Conditional documentation in installation section ("how to install a
  Python interpreter").

Backwards Incompatibilities
---------------------------

- The ``callback`` argument of the ``repoze.bfg.authentication``
  authentication policies named ``RepozeWho1AuthenticationPolicy``,
  ``RemoteUserAuthenticationPolicy``, and
  ``AuthTktAuthenticationPolicy`` now must accept two positional
  arguments: the orginal argument accepted by each (userid or
  identity) plus a second argument, which will be the current request.
  Apologies, this is required to service finding groups when there is
  no "global" database connection.

1.0a1 (2009-06-22)
==================

Features
--------

- A new ZCML directive was added named ``notfound``.  This ZCML
  directive can be used to name a view that should be invoked when the
  request can't otherwise be resolved to a view callable.  For example::

    <notfound 
        view="helloworld.views.notfound_view"/>

- A new ZCML directive was added named ``forbidden``.  This ZCML
  directive can be used to name a view that should be invoked when a
  view callable for a request is found, but cannot be invoked due to
  an authorization failure.  For example::

   <forbidden